# LaGO

./: .gitattributes  AUTHORS  Externals  INSTALL  LICENSE  Makefile.am  Makefile.in  README  README.md  bonmin.patch  cgc.patch  configure  configure.ac  os.patch
.coin-or/: projDesc.xml
LaGO/: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  configure  configure.ac
LaGO/doc/: footer.html  makefile
LaGO/inc/: config_lago.h.in
LaGO/src/: LaGO.cc  LaGOConfig.h  MINLP.cc  MINLPData.cc  Makefile.am  Makefile.in  ampl.cc  ampl.h  bcp.cc  bcp.h  boxfind.cc  boxfind.h  column.h  config_lago.h.in  cuts.cc  cuts.h  decomp.cc  decomp.h  dualqqp.cc  dualqqp.h  f77filehandle.cc  func.cc  func.h  gams.cc  gams.h  gamspreprocess.cc  gmsla_us.run  graph.h  ipopt2.cc  ipopt2.h  lagheu.cc  lagheu.h  linrelax.cc  linrelax.h  minlpopt.cc  minlpopt.h  node.cc  node.h  opt.cc  opt.h  (+25 more)
LaGO/src/Algorithms/: LaGOAlgorithm.cpp  LaGOAlgorithm.hpp  LaGOBoxReduction.cpp  LaGOBoxReduction.hpp  LaGOConstraintPropagation.cpp  LaGOConstraintPropagation.hpp  LaGOConvexification.cpp  LaGOConvexification.hpp  LaGOCurvatureCheck.cpp  LaGOCurvatureCheck.hpp  LaGODecomposition.cpp  LaGODecomposition.hpp  LaGOQuadraticEstimation.cpp  LaGOQuadraticEstimation.hpp  LaGOQuadraticRelaxTest.cpp  LaGOQuadraticRelaxTest.hpp  LaGOSampling.cpp  LaGOSampling.hpp  LaGOSumFunction.hpp  Makefile.am  Makefile.in
LaGO/src/Algorithms/Decomposition/: LaGODecomposition.cpp  LaGODecomposition.hpp  LaGORestrictedFunction.cpp  LaGORestrictedFunction.hpp
LaGO/src/Algorithms/Sampling/: LaGOSampling.cpp  LaGOSampling.hpp
LaGO/src/Applications/: LaGOGAMS.cpp  Makefile.am  Makefile.in
LaGO/src/Base/: LaGOConfig.h  LaGODenseVector.cpp  LaGODenseVector.hpp  LaGOFunction.cpp  LaGOFunction.hpp  LaGOIntervalVector.cpp  LaGOIntervalVector.hpp  LaGOMatrix.hpp  LaGORandomNumber.cpp  LaGORandomNumber.hpp  LaGOScaledFunction.hpp  LaGOSmartPtr.hpp  LaGOSparseVector.cpp  LaGOSparseVector.hpp  LaGOSymMatrix.hpp  LaGOSymSparseMatrix.cpp  LaGOSymSparseMatrix.hpp  LaGObase.hpp  Makefile.am  Makefile.in  base.hpp
LaGO/src/Interfaces/: LaGOOsiSolver.cpp  LaGOOsiSolver.hpp  Makefile.am  Makefile.in
LaGO/src/Interfaces/GAMS/: LaGOG2DFunction.cpp  LaGOG2DFunction.hpp  LaGOGamsFunction.cpp  LaGOGamsFunction.hpp  LaGOGamsReader.cpp  LaGOGamsReader.hpp  LaGOGamsSolver.cpp  LaGOGamsSolver.hpp  Makefile.am  Makefile.in
LaGO/src/Interfaces/OS/: LaGOOSFunction.cpp  LaGOOSFunction.hpp  Makefile.am  Makefile.in
LaGO/src/Problem/: LaGOBlockFunction.cpp  LaGOBlockFunction.hpp  LaGOBoxMinimizationProblem.cpp  LaGOBoxMinimizationProblem.hpp  LaGOCurvature.hpp  LaGOMINLPData.cpp  LaGOMINLPData.hpp  LaGOQuadraticEstimator.hpp  LaGOQuadraticFunction.cpp  LaGOQuadraticFunction.hpp  LaGOQuadraticOrConvexApproximation.cpp  LaGOQuadraticOrConvexApproximation.hpp  LaGOQuadraticUnderestimator.hpp  LaGORestrictedFunction.cpp  LaGORestrictedFunction.hpp  LaGOSampleSet.cpp  LaGOSampleSet.hpp  LaGOSimpleBlockFunction.cpp  LaGOSimpleBlockFunction.hpp  LaGOSparsity.cpp  LaGOSparsity.hpp  LaGOSumFunction.cpp  LaGOSumFunction.hpp  Makefile.am  Makefile.in
LaGO/test/: Makefile.am  Makefile.in  alan.bkov  alan.gms  alan.nl  elf.bkov  elf.gms  ex1221.gms  ex1222.bkov  ex1222.gms  ex1222.mod  ex1223.bkov  ex1223.gms  ex1223.nl  ex1252.bkov  ex1252.gms  run_tests.in
doc/: COINintegration.tex  doxygen.conf  makefile  paramdochtml.lex
doxydoc/: doxygen.conf
mod/: alan.mod  alan.sol  elf.lst  elf.mod  elf.nl  elf.sol  ex1221.mod  ex1221.nl  ex1221.sol  ex1222.lst  ex1222.nl  ex1222.sol  ex1223.lst  ex1223.mod  ex1223.sol  ex1252.lst  ex1252.mod  ex1252.nl
src/: LaGO.cc  MINLP.h  MINLPData.h  MINLPView.cc  MINLPView.h  ampl.cc  ampl.h  bcp.h  boxfind.cc  boxfind.h  column.cc  decomp.cc  f77filehandle.h  f77files.f  func.h  ipopt2.cc  ipopt2.h  linrelax.h  makefile  minlpopt.cc  node.cc  opt.cc  opt.h  osi.cc  osi.h  param.cc  param.h  polynom.cc  polynom.h  problem.cc  quaduest.cc  quaduest.h  relax.cc  relaxopt.h  rmp.cc  snopt.cc  snopt.h  standard.h  tools.h  uservector.h
