# Copyright (C) 2006 Ivo Nowak and Stefan Vigerske
# All Rights Reserved.
# This file is distributed under the Common Public License.
#
## $Id$
#
# Author: Stefan Vigerske

AUTOMAKE_OPTIONS = foreign

test:
	chmod u+x ./run_tests
	./run_tests

unitTest: test

.PHONY: test unitTest

DISTCLEANFILES = 
